# tree-sitter-nim

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  REUSE.toml  binding.gyp  go.mod  grammar.js  mise.toml  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  reuse.yml
.reuse/: dep5
bindings/c/: tree-sitter-nim.pc.in
bindings/c/tree_sitter/: tree-sitter-nim.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_nim/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNim/: nim.h
bindings/swift/TreeSitterNimTests/: TreeSitterNimTests.swift
corpus/: declarations.txt  expressions.txt  extras.txt  literals.txt  statements.txt
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc  scanner2.cc
test/corpus/: deviations.txt  literals.txt
